--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,232 @@ html {
 
 body {
   font-family: "Manrope", sans-serif;
-  font-weight: 300;
   line-height: 1.6;
+  background-image: url(../assets/bg-pattern.svg);
+  background-color: #fafbff;
+  background-repeat: no-repeat;
 }
 
 .container {
   max-width: 1440px;
   display: grid;
+  justify-items: center;
+  grid-template-rows: repeat(3, min-content);
+}
+
+.header {
+  max-width: 54rem;
+  text-align: center;
+  padding: 8rem 0;
+  background-image: url(../assets/pattern-circles.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.header .header-1 {
+  color: #293356;
+  font-weight: 800;
+  font-size: 2rem;
+  padding-bottom: 2rem;
+}
+.header .header-3 {
+  font-size: 1.5rem;
+  display: inline-block;
+  color: #858fad;
+  font-weight: 600;
+}
+@media only screen and (max-width: 23.4375rem) {
+  .header .header-3 {
+    display: block;
+  }
+}
+
+.pricing-component {
+  max-width: 54rem;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(10rem, 1fr));
+  justify-items: center;
+  align-items: center;
+  grid-row-gap: 4rem;
+  width: 100%;
+  color: #858fad;
+  background-color: white;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  padding: 3rem;
+  border-bottom: solid 1px #cdd7ee;
+}
+.pricing-component__pageviews {
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  justify-self: start;
+}
+@media only screen and (max-width: 23.4375rem) {
+  .pricing-component__pageviews {
+    grid-column: 1/3;
+    justify-self: center;
+  }
+}
+.pricing-component__monthly {
+  font-size: 1.5rem;
+  justify-self: end;
+}
+@media only screen and (max-width: 23.4375rem) {
+  .pricing-component__monthly {
+    grid-column: 1/3;
+    grid-row: 3/4;
+    justify-self: center;
+  }
+}
+.pricing-component__monthly-price {
+  font-size: 3.8rem;
+  color: black;
+}
+@media only screen and (max-width: 23.4375rem) {
+  .pricing-component__monthly-price {
+    font-size: 5.2rem;
+  }
+}
+.pricing-component__monthly .interval {
+  display: inline-block;
+  transform: translateY(-1rem);
+}
+.pricing-component__input-range {
+  grid-column: 1/3;
+  width: 100%;
+  justify-self: center;
+}
+@media only screen and (max-width: 23.4375rem) {
+  .pricing-component__input-range {
+    grid-column: 1/3;
+    grid-row: 2/3;
+    justify-self: center;
+  }
+}
+.pricing-component__selection {
+  grid-column: 1/3;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem 0;
+}
+@media only screen and (max-width: 23.4375rem) {
+  .pricing-component__selection {
+    padding: 0;
+  }
+}
+.pricing-component__selection :not(:last-child) {
+  margin-right: 1rem;
+}
+.pricing-component__selection .radio-btn {
+  width: 4rem;
+  height: 2rem;
+  background-color: #cdd7ee;
+  border-radius: 1rem;
+}
+.pricing-component__selection .radio-btn .toggle {
+  height: 1.6rem;
+  width: 1.6rem;
+  margin-top: 2px;
+  margin-left: 2px;
+  border: none;
+  border-radius: 50%;
+  background-color: #fff;
+  transform: translateX(0);
+  transition: all 0.2s ease;
+}
+.pricing-component__selection .radio-btn .toggled {
+  transform: translateX(2rem);
+  transition: transform 0.2s ease;
+}
+.pricing-component__selection .discount-btn p {
+  background-color: #feece7;
+  border-radius: 1rem;
+  color: #ff8c66;
+  padding: 0.2rem 1rem;
+  text-align: center;
+  font-weight: 600;
+}
+@media only screen and (max-width: 23.4375rem) {
+  .pricing-component__selection .discount-btn span {
+    display: none;
+  }
+}
+
+input[type=range] {
+  -webkit-appearance: none;
+  width: 100%;
+  border-radius: 5px;
+  height: 10px;
+  border: none;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+  height: 10px;
+  border: none;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: none;
+  height: 4.8rem;
+  width: 4.8rem;
+  border-radius: 50%;
+  background: #10d5c2;
+  margin-top: -20px;
+  background-image: url(../assets/icon-slider.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  box-shadow: 0 1rem 2rem 0.5rem #a5f3eb;
+}
+
+input[type=range]::-moz-range-track {
+  height: 10px;
+  border: none;
+}
+
+input[type=range]::-moz-range-thumb {
+  border: none;
+  height: 4.8rem;
+  width: 4.8rem;
+  border-radius: 50%;
+  background: #10d5c2;
+  margin-top: -20px;
+  background-image: url(../assets/icon-slider.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  box-shadow: 0 1rem 2rem 0.5rem #a5f3eb;
+}
+
+.cta {
+  max-width: 54rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  justify-items: center;
+  align-items: center;
+  background-color: white;
+  width: 100%;
+  padding: 3rem;
+  color: #858fad;
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  overflow: hidden;
+}
+.cta p {
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+}
+.cta img {
+  margin-right: 1.5rem;
+}
+.cta p:last-child {
+  margin-bottom: 2rem;
+}
+.cta__btn {
+  padding: 1em 3.5em;
+  border: none;
+  border-radius: 100px;
+  background-color: #293356;
+  color: white;
+  cursor: pointer;
 }
