--- a/sass/_pricing-component.scss
+++ b/sass/_pricing-component.scss
@@ -67,8 +67,10 @@
     align-items: center;
     justify-content: center;
     padding: 1rem 0;
+    transform: translateX(3.5rem);
     @media only screen and (max-width: $bp-small) {
       padding: 0;
+      transform: translateX(1.6rem);
     }
 
     & :not(:last-child) {
