--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,7 @@ body {
   height: 2rem;
   background-color: #cdd7ee;
   border-radius: 1rem;
+  position: relative;
 }
 .pricing-component__selection .radio-btn .toggle {
   height: 1.6rem;
@@ -149,6 +150,7 @@ body {
   background-color: #fff;
   transform: translateX(0);
   transition: all 0.2s ease;
+  position: absolute;
 }
 .pricing-component__selection .radio-btn .toggled {
   transform: translateX(2rem);
